# Recapsule

./: .gitignore  README.md  pyproject.toml
app/: audio_stitcher.py  episode_pipeline.py  gemini_client.py  main.py  models.py  tts_client.py
backend/: .env.example  pyproject.toml
backend/app/: audio_stitcher.py  config.py  db.py  episode_pipeline.py  gemini_client.py  image_client.py  main.py  models.py  storage.py
frontend/: index.html  package-lock.json  package.json  podcast-ui.html
frontend/src/: App.jsx  index.css
frontend/src/api/: episodes.js
frontend/src/components/: CategoryPills.jsx  Header.jsx  Hero.jsx  Layout.jsx  NowPlaying.jsx  PodcastCard.jsx  PodcastGrid.jsx  PodcastSection.jsx  SearchBar.jsx
frontend/src/data/: podcasts.js
frontend/src/pages/: CreatePage.jsx  HomePage.jsx
